Update Relay Stream

--- a/HTRecorderManager/HTRecorderManager.vcxproj
+++ b/HTRecorderManager/HTRecorderManager.vcxproj
@@ -50,19 +50,23 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)HTRecorder\include;$(SolutionDir)dxd9\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)platform\win32\x86\release\lib;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)platform\win32\x86\release\bin\</OutDir>
+    <IntDir>$(SolutionDir)platform\win32\x86\release\intermediate\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CRT_SECURE_NO_WARNINGS;SQLITE_THREADSAFE=2;SQLITE_SECURE_DELETE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CRT_SECURE_NO_WARNINGS;SQLITE_THREADSAFE=2;SQLITE_SECURE_DELETE;DISPLIB_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>HTRecorder.lib;avcodec.lib;avformat.lib;avfilter.lib;avutil.lib;postproc.lib;swscale.lib;DisplayLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>HTRecorder.lib;DisplayLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -82,7 +86,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_CRT_SECURE_NO_WARNINGS;SQLITE_THREADSAFE=2;SQLITE_SECURE_DELETE;DISPLIB_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -90,6 +94,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>HTRecorder.lib;DisplayLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -165,6 +170,7 @@
     </ClCompile>
     <ClCompile Include="RecorderDAO.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RecorderDlg.cpp" />
     <ClCompile Include="HTRecorderIF.cpp">
@@ -179,6 +185,7 @@
     </ClCompile>
     <ClCompile Include="SiteDAO.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SiteDlg.cpp" />
     <ClCompile Include="SiteView.cpp" />
